Test/typing/should_fail/array.java
package tutu.titi.toto;

class A {
	int[][] two;

	public void method1() {
		int one;
		one = 1;
		two[2][3] = one;
		one = two[1][2];
	}
}
